# mamba-minimal

./: demo.py  gpu_benchmark_results.csv  main.py  model.py  test.py
ops/: main.py
ops/extensions/: CMakeLists.txt  bindings.cpp  setup.py
ops/extensions/axpby/: axpby.cpp  axpby.h
